[package]
name = "userp"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4"
ignore = "0.4"
itertools = "0.8"
pretty_assertions = "0.6"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
toml = "0.5"
